# quandary

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/quandary/: __init__.py  ast.py  compiler.py  debug.py  exceptions.py  grammar.py  nil.py  scope.py  walker.py
tests/: test_basic.py  test_comparisons.py  test_condition.py  test_expressions.py  test_functions.py  test_maths.py  test_nil.py  test_scope_default.py  test_walker.py
