[project]
name = "quandary"
description = "A mini-langauge compiler for answering conditions."

readme = "README.md"

authors = [
    {name = "Curtis Maloney", email = "curtis@tinbrain.net"},
]

license.text = ""

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">= 3.10"

dependencies = [
    "parsimonious",
]

dynamic = ["version"]

[project.urls]

[tool.setuptools.dynamic]
version.attr = "quandary.__version__"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
source = ['.']

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = [
    'E',
    'F',
    'W',
    'I', # isort
    'N',
    'UP',
    'S', # bandit (security)
    'A', # builtins
    'C', # commas
    'C4', # comprehensions
    'DTZ', # datetimez
    'ISC', # implicit string concat
    'PIE',
    'ARG', # unused arguments
    'PL', # pylint
    'FLY', # f-string usages
    'PERF',
    'RUF', # ruff specific
]

ignore = [
    'ISC001', # format whines about this
    'RUF012',  # Mutable class attributes should be annotated with `typing.ClassVar`
]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double" # Lower chance of needing to escape; ' appears in strings more often than "

docstring-code-format = false

[tool.ruff.lint.isort]
section-order = [
    'future',
    'standard-library',
    'third-party',
    'first-party',
    'local-folder',
]
